fix: Update React imports and CDN links
This commit updates the import paths for React and React DOM in `index.tsx` and `App.tsx` to use the `.tsx` extension. It also adjusts the CDN links in `index.html` to point to specific versions of React and React DOM for better consistency and to align with the `package.json` versions. Minor text and styling adjustments were made in `ContactPage.tsx` to improve clarity and user experience.

--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.2.0",
+    "react-dom": "https://esm.sh/react-dom@19.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.2.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-slate-950 text-slate-100 antialiased overflow-x-hidden">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
